--- a/Vistaaa/Views/ProfilePage.xaml
+++ b/Vistaaa/Views/ProfilePage.xaml
@@ -5,7 +5,7 @@
              Title="Profil" >
     <Grid x:Name="profilePage">
         <VerticalStackLayout HorizontalOptions="Center" VerticalOptions="Center" Spacing="20" MaximumWidthRequest="300" x:Name="form">
-            <Label Text="Witaj w Vistaaa! Wygląda na to, że nie jesteś zalogowany." HorizontalTextAlignment="Center" FontAttributes="Bold" FontSize="20"/>
+            <Label FontFamily="SignikaNegative" Text="Witaj w Vistaaa! Wygląda na to, że nie jesteś zalogowany." HorizontalTextAlignment="Center" FontAttributes="Bold" FontSize="20"/>
             <Label Text="Zaloguj się, by móc w pełni korzystać z systemu Vistaaa."/>
             <Button Text="Zaloguj się" Clicked="LoginButton_Clicked"/>
             <Label Text="Nie masz jeszcze konta? Zarejestruj się za darmo."/>
