--- a/Vistaaa/Controls/ProfileView.xaml
+++ b/Vistaaa/Controls/ProfileView.xaml
@@ -3,10 +3,27 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Vistaaa.Controls.ProfileView">
     <VerticalStackLayout>
-        <Label x:Name="label"
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-        <Button x:Name="logoutButton" x:FieldModifier="public"  Text="Wyloguj się"/>
+        <Grid ColumnSpacing="15" Padding="15">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="7*"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <Image Grid.Column="1" x:Name="profileImage" Source="user.png" WidthRequest="100" HeightRequest="100">
+                <Image.Clip>
+                    <EllipseGeometry Center="50,50" RadiusX="50" RadiusY="50" />
+                </Image.Clip>
+            </Image>
+            <VerticalStackLayout VerticalOptions="Center" Grid.Column="2">
+                <Label FontSize="22" FontAttributes="Bold" FontFamily="SignikaNegative" CharacterSpacing="1.3" x:Name="nameAndSurnameLabel"/>
+                <Label Text="aaa"/>
+            </VerticalStackLayout>
+        </Grid>
+        <ScrollView>
+            <FlexLayout MaximumWidthRequest="1200">
+                <Button x:Name="logoutButton" x:FieldModifier="public"  Text="Wyloguj się"/>
+            </FlexLayout>
+        </ScrollView>
     </VerticalStackLayout>
 </ContentView>
