--- a/Vistaaa/Views/AdvertisementPage.xaml
+++ b/Vistaaa/Views/AdvertisementPage.xaml
@@ -13,10 +13,10 @@
             <VerticalStackLayout>
                 <Grid HeightRequest="250" BackgroundColor="Gray">
                     <maps:Map x:Name="map"/>
-                    <!--http://schemas.microsoft.com/dotnet/2021/maui/maps;-->
+                    <Label Text="aa" BackgroundColor="Orange" VerticalOptions="Start" HorizontalOptions="End"/>
                 </Grid>
                 <VerticalStackLayout MaximumWidthRequest="1200" Padding="15" TranslationY="-25">
-                    <Border StrokeThickness="0" BackgroundColor="#663399" Padding="15" >
+                    <Border StrokeThickness="0" BackgroundColor="#1E90FF" Padding="15" >
                         <Border.StrokeShape>
                             <RoundRectangle CornerRadius="15"/>
                         </Border.StrokeShape>
