--- a/Vistaaa/MainPage.xaml
+++ b/Vistaaa/MainPage.xaml
@@ -13,8 +13,8 @@
                     <Picker x:Name="sortTypePicker" ItemDisplayBinding="{Binding Item1}"/>
                 </HorizontalStackLayout>
                 <HorizontalStackLayout Margin="5">
-                    <CheckBox/>
-                    <Label Text="Tylko ulubione" VerticalOptions="Center"/>
+                    <CheckBox x:Name="onlySavedCheckbox"/>
+                    <Label Text="Tylko zapisane" VerticalOptions="Center"/>
                 </HorizontalStackLayout>
                 <HorizontalStackLayout Spacing="15" Margin="5"> 
                     <Label Text="Liczba ogłoszeń na stronie:" VerticalOptions="Center"/>
@@ -26,8 +26,8 @@
                 <Button Text="Usuń wszystkie (0)"/>
             </HorizontalStackLayout>
             <ActivityIndicator IsRunning="True" x:Name="loading" />
-            <RefreshView x:Name="refreshView" RefreshColor="#1E90FF">
-                <CollectionView x:Name="AdvertisementCollectionView" >
+            <RefreshView x:Name="refreshView" RefreshColor="#1E90FF" HeightRequest="1000">
+                <CollectionView x:Name="AdvertisementCollectionView" SelectionMode="Single" SelectionChanged="AdvertisementCollectionView_SelectionChanged">
                     <CollectionView.Header>
                         <Label IsVisible="False" HorizontalOptions="Center" FontSize="20" FontAttributes="Bold" FontFamily="SignikaNegative" x:Name="headerCollectionViewLabel"/>
                     </CollectionView.Header>
@@ -38,55 +38,65 @@
                     </CollectionView.EmptyView>
                     <CollectionView.ItemTemplate>
                     <DataTemplate>
-                        <StackLayout>
-                            <Border IsEnabled="{Binding IsUpToDate}" HeightRequest="30" Padding="10, 5" BackgroundColor="SeaGreen" StrokeThickness="0" TranslationX="-25" HorizontalOptions="End" ZIndex="999">
-                                <Border.StrokeShape>
-                                    <RoundRectangle CornerRadius="15"/>
-                                </Border.StrokeShape>
-                                <Label Text="{Binding Path=CreationDate, StringFormat='{0:d MMM yyyy}'}" TextColor="White" FontSize="13" FontAttributes="Bold" VerticalOptions="Center"/>
-                            </Border>
-                            <Border  StrokeThickness="1" Margin="0, -20, 0, 0">
-                                <Border.StrokeShape>
-                                    <RoundRectangle CornerRadius="10"/>
-                                </Border.StrokeShape>
-                                <StackLayout Margin="10, 5" >
-                                    <Label Text="{Binding CategoryName}" Margin="0, 15, 0, 0" FontSize="12" FontAttributes="Bold" TextColor="Gray" Opacity="0.9"/>
-                                    <Label Text="{Binding Title}" FontSize="17" FontAttributes="Bold"/>
-                                    <Label Text="{Binding Path=CompanyName, StringFormat='przez: {0}'}" FontSize="13" FontAttributes="Bold"/>
-                                    <Label TextColor="#B566FF" Text="{Binding Path=HighestSalary, StringFormat='do {0:N0} zł'}" FontSize="13" FontAttributes="Bold"/>
-                                    <FlexLayout Wrap="Wrap">
-                                        <Label Opacity="0.8">
-                                            <Label.Text>
-                                                <MultiBinding StringFormat="{}{0}  &#x2022; {1}  &#x2022; {2} &#x2022; {3} &#x2022; {4} ">
-                                                    <Binding Path="PositionName" />
-                                                    <Binding Path="PositionLevel" />
-                                                    <Binding Path="ContractType" />
-                                                    <Binding Path="Employment" />
-                                                    <Binding Path="WorkType" />
-                                                </MultiBinding>
-                                            </Label.Text>
-                                        </Label>
-                                    </FlexLayout>
-                                    <Button Margin="0, 10, 0, 0" Text="Szczegóły" BackgroundColor="DodgerBlue" FontAttributes="Bold" FontFamily="SignikaNegative" TextColor="White" HorizontalOptions="Center" Clicked="Button_Clicked"/>
-                                    <FlyoutBase.ContextFlyout>
-                                        <MenuFlyout>
-                                            <MenuFlyoutItem Text="Usuń"/>
-                                            <MenuFlyoutSeparator/>
-                                            <MenuFlyoutSubItem Text="Zmień">
-                                                <MenuFlyoutItem Text="Zmień nazwę"/>
-                                                <MenuFlyoutItem Text="Zmień opis"/>
-                                            </MenuFlyoutSubItem>
-                                        </MenuFlyout>
-                                    </FlyoutBase.ContextFlyout>
-                                </StackLayout>
-                                <!--<Border.Shadow>
+                            <SwipeView>
+                                <SwipeView.LeftItems>
+                                    <SwipeItems>
+                                        <SwipeItem Text="Edytuj"
+                                            BackgroundColor="LightGreen"
+                                            Invoked="EditAdvertisementMenuItem_Clicked"/>
+                                    </SwipeItems>
+                                </SwipeView.LeftItems>
+                                <StackLayout>
+                                    <Border IsEnabled="{Binding IsUpToDate}" HeightRequest="30" Padding="10, 5" BackgroundColor="SeaGreen" StrokeThickness="0" TranslationX="-25" HorizontalOptions="End" ZIndex="999">
+                                        <Border.StrokeShape>
+                                            <RoundRectangle CornerRadius="15"/>
+                                        </Border.StrokeShape>
+                                        <Label Text="{Binding Path=CreationDate, StringFormat='{0:d MMM yyyy}'}" TextColor="White" FontSize="13" FontAttributes="Bold" VerticalOptions="Center"/>
+                                    </Border>
+                                    <Border IsEnabled="{Binding IsUpToDate}" StrokeThickness="1" Margin="0, -20, 0, 0">
+                                        <Border.StrokeShape>
+                                            <RoundRectangle CornerRadius="10"/>
+                                        </Border.StrokeShape>
+                                        <StackLayout Margin="10, 5" >
+                                            <Label Text="{Binding CategoryName}" Margin="0, 15, 0, 0" FontSize="12" FontAttributes="Bold" TextColor="Gray" Opacity="0.9"/>
+                                            <Label Text="{Binding Title}" FontSize="17" FontAttributes="Bold"/>
+                                            <Label Text="{Binding Path=CompanyName, StringFormat='przez: {0}'}" FontSize="13" FontAttributes="Bold"/>
+                                            <Label TextColor="#B566FF" Text="{Binding Path=HighestSalary, StringFormat='do {0:N0} zł'}" FontSize="13" FontAttributes="Bold"/>
+                                            <FlexLayout Wrap="Wrap">
+                                                <Label Opacity="0.8">
+                                                    <Label.Text>
+                                                        <MultiBinding StringFormat="{}{0}  &#x2022; {1}  &#x2022; {2} &#x2022; {3} &#x2022; {4} ">
+                                                            <Binding Path="PositionName" />
+                                                            <Binding Path="PositionLevel" />
+                                                            <Binding Path="ContractType" />
+                                                            <Binding Path="Employment" />
+                                                            <Binding Path="WorkType" />
+                                                        </MultiBinding>
+                                                    </Label.Text>
+                                                </Label>
+                                            </FlexLayout>
+                                            <Button Margin="0, 10, 0, 0" Text="Szczegóły" BackgroundColor="DodgerBlue" FontAttributes="Bold" FontFamily="SignikaNegative" TextColor="White" HorizontalOptions="Center"/>
+                                            <FlyoutBase.ContextFlyout>
+                                                <MenuFlyout>
+                                                    <MenuFlyoutItem Text="Edytuj ogłoszenie" Clicked="EditAdvertisementMenuItem_Clicked"/>
+                                                    <MenuFlyoutSeparator/>
+                                                    <MenuFlyoutSubItem Text="Zmień">
+                                                        <MenuFlyoutItem Text="Zmień nazwę"/>
+                                                        <MenuFlyoutItem Text="Zmień opis"/>
+                                                    </MenuFlyoutSubItem>
+                                                </MenuFlyout>
+                                            </FlyoutBase.ContextFlyout>
+                                        </StackLayout>
+                                        <!--<Border.Shadow>
                                     <Shadow  Brush="#BBB"
                                     Offset="3, 3"
                                     Radius="5"
                                     Opacity="0.9" />
                                 </Border.Shadow>-->
-                            </Border>
-                        </StackLayout>
+                                    </Border>
+                                </StackLayout>
+                            </SwipeView>
+                            
                     </DataTemplate>
                     </CollectionView.ItemTemplate>
                     <CollectionView.ItemsLayout>
