--- a/Vistaaa/Views/AddOrEditAdvertisement.xaml
+++ b/Vistaaa/Views/AddOrEditAdvertisement.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Vistaaa.Views.AddOrEditAdvertisement"
-             Title="Dodaj nowe ogłoszenie">
+             Title="Dodaj nowe ogłoszenie" x:Name="addOrEditAdvertisementContentPage">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
