--- a/Vistaaa/Views/AdvertisementPage.xaml
+++ b/Vistaaa/Views/AdvertisementPage.xaml
@@ -64,7 +64,7 @@
                                     <Label.FormattedText>
                                         <FormattedString>
                                             <Span FontFamily="FAS" Text="&#xf81d; " FontAttributes="Bold" FontSize="30"/>
-                                            <Span FontFamily="SignikaNegative" FontAttributes="Bold" FontSize="25" x:Name="advertisementEarnings"/>
+                                            <Span FontFamily="SignikaNegative" FontAttributes="Bold" FontSize="26" x:Name="advertisementEarnings"/>
                                         </FormattedString>
                                     </Label.FormattedText>
                                 </Label>
@@ -83,9 +83,10 @@
                 </VerticalStackLayout>
             </VerticalStackLayout>
         </ScrollView>
-        <StackLayout Grid.Row="1" Padding="15">
-            <FlexLayout JustifyContent="Center">
-                <Button FontFamily="SignikaNegative" Margin="0, 0, 10, 0" Text="Aplikuj" FlexLayout.Shrink="1" FlexLayout.Basis="350" TextColor="White" FontAttributes="Bold" FontSize="18" CharacterSpacing="1" CornerRadius="20" BackgroundColor="SeaGreen"/>
+        <StackLayout Grid.Row="1" Padding="15" Spacing="10">
+            <Label x:Name="expiredAdvertisementLabel" HorizontalTextAlignment="Center" IsVisible="False" Text="Opcje aplikowania i zapisywania są wyłączone, ponieważ termin ważności tego ogłoszenia już się skończył." FontFamily="SignikaNegative" FontSize="18"/>
+            <FlexLayout JustifyContent="Center" x:Name="advertisementButtonsFlexLayout">
+                <Button x:Name="applyButton" FontFamily="SignikaNegative" Margin="0, 0, 10, 0" Text="Aplikuj" FlexLayout.Shrink="1" FlexLayout.Basis="350" TextColor="White" FontAttributes="Bold" FontSize="18" CharacterSpacing="1" CornerRadius="20" BackgroundColor="SeaGreen" Clicked="ApplyButton_Clicked"/>
                 <Button x:Name="saveButton" FontFamily="SignikaNegative" Margin="10, 0, 0, 0" Text="Zapisz" FlexLayout.Shrink="1" FlexLayout.Basis="350"  BackgroundColor="Transparent" BorderWidth="2" BorderColor="DodgerBlue" CornerRadius="20" TextColor="DodgerBlue" FontAttributes="Bold" FontSize="18" CharacterSpacing="1" Clicked="SaveButton_Clicked"/>
             </FlexLayout>
         </StackLayout>
