--- a/Vistaaa/Views/ProfilePage.xaml
+++ b/Vistaaa/Views/ProfilePage.xaml
@@ -7,9 +7,9 @@
         <VerticalStackLayout HorizontalOptions="Center" VerticalOptions="Center" Spacing="20" MaximumWidthRequest="300" x:Name="form">
             <Label FontFamily="SignikaNegative" Text="Witaj w Vistaaa! Wygląda na to, że nie jesteś zalogowany." HorizontalTextAlignment="Center" FontAttributes="Bold" FontSize="20"/>
             <Label Text="Zaloguj się, by móc w pełni korzystać z systemu Vistaaa."/>
-            <Button Text="Zaloguj się" Clicked="LoginButton_Clicked"/>
-            <Label Text="Nie masz jeszcze konta? Zarejestruj się za darmo."/>
-            <Button Text="Zarejestruj się" Clicked="RegistrationButton_Clicked"/>
+            <Button Text="Zaloguj się" Clicked="LoginButton_Clicked" Style="{StaticResource commonButton}"/>
+            <Label Text="Nie masz jeszcze konta? Zarejestruj się za darmo jako firma lub użytkownik indywidualny."/>
+            <Button Text="Zarejestruj się" Clicked="RegistrationButton_Clicked" Style="{StaticResource commonButton}"/>
         </VerticalStackLayout>
     </Grid>
 </ContentPage>
